--- a/ansible_playbook_configure-test-server.yml
+++ b/ansible_playbook_configure-test-server.yml
@@ -3,6 +3,10 @@
   hosts: test_servers
   become: true
   tasks:
+  
+    -name: Update apt package index
+     apt:
+       update_cache: yes
 
     - name: Install Docker (if not installed)
       apt:
